--- a/html/contato.html
+++ b/html/contato.html
@@ -27,7 +27,7 @@
 
         <ul>
             <li class="item-do-menu">
-                <a href="menu.html">
+                <a href="index.html">
                     <span class="icon"><i class="bi bi-house"></i></span>
                     <span class="txt-link">Pagina Inicial</span>
                 </a>
