--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
 
         <ul>
             <li class="item-do-menu">
-                <a href="menu.html">
+                <a href="index.html">
                     <span class="icon"><i class="bi bi-house"></i></span>
                     <span class="txt-link">Pagina Inicial</span>
                 </a>
