Resolvendo problemas de diretórios, tags mal fechadas

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -65,7 +65,7 @@
         <div class="conteudo">
             <!-- conteudo -->
             <h1>Quem Somos</h1>
-            <p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo iusto, quis atque adipisci non animi sapiente vel blanditiis, nihil consectetur officiis consequatur. Placeat fuga magni tenetur tempora voluptas nobis quasi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore quidem in iusto? Nulla eaque impedit voluptatem perspiciatis ducimus, quisquam rem, nam laudantium perferendis corporis adipisci libero incidunt, illo laboriosam ex? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam minus minima esse accusamus harum iste quam officia sequi. Delectus animi quis ut nesciunt placeat, recusandae porro laudantium ullam voluptatibus labore.</p></p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo iusto, quis atque adipisci non animi sapiente vel blanditiis, nihil consectetur officiis consequatur. Placeat fuga magni tenetur tempora voluptas nobis quasi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore quidem in iusto? Nulla eaque impedit voluptatem perspiciatis ducimus, quisquam rem, nam laudantium perferendis corporis adipisci libero incidunt, illo laboriosam ex? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam minus minima esse accusamus harum iste quam officia sequi. Delectus animi quis ut nesciunt placeat, recusandae porro laudantium ullam voluptatibus labore.</p></p>
 
         </div>
     </div>
