Adicionando aba de Eventos

--- a/colaboradores.html
+++ b/colaboradores.html
@@ -60,6 +60,13 @@
                     <span class="txt-link">Onde nos encontrar</span>
                 </a>
             </li>
+
+            <li class="item-do-menu">
+                <a href="eventos.html">
+                    <span class="icon"><i class="bi bi-calendar-event"></i></span>
+                    <span class="txt-link">Eventos</span>
+                </a>
+            </li>
         </ul>
     </nav>
 
